k8s/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-service
  template:
    metadata:
      labels:
        app: app-service
    spec:
      serviceAccountName: app-sa
      containers:
      - name: app-service
        image: 806379018922.dkr.ecr.ap-south-1.amazonaws.com/devops_project:latest
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
