k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-api-svc
spec:
  type: ClusterIP
  selector:
    app: dummy-api
  ports:
  - port: 80
    targetPort: 5678
