k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  type: ClusterIP
  selector:
    app: app-service
  ports:
  - port: 80
    targetPort: 3000
