k8s/base/health-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-svc
spec:
  type: ClusterIP
  selector:
    app: health-service
  ports:
  - port: 80
    targetPort: 5678
